chapter_kubernetes/manifests/cndw-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cndw-web-app
  labels:
    app: cndw-web-app
    name: cndw-web-app
spec:
  containers:
  - name: cndw-web-app
    image: ryuichitakei/cndw-web-app:1.2
    imagePullPolicy: Always
    ports:
    - containerPort: 8888
    volumeMounts:
    - name: app-secret-volumes
      mountPath: "/opt/app-secret-volumes"
      readOnly: true
  volumes:
    - name: app-secret-volumes
      secret:
        secretName: app-secret
---

apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    name: mysql
spec:
  containers:
  - name: mysql
    image: mysql
    ports:
    - containerPort: 3306
---

apiVersion: v1
kind: Pod
metadata:
  name: dummy-app
  labels:
    name: dummy-app
spec:
  containers:
  - name: dummy-app
    image: ryuichitakei/dummy-app:1.0
    imagePullPolicy: Always
    ports:
    - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: mysql-svc
spec:
  selector:
    name: mysql
  ports:
  - port: 3306
    targetPort: 8888

---

kind: Service
apiVersion: v1
metadata:
  name: cndw-web-svc
spec:
  selector:
    name: dummy-app
  type: ClusterIP
  ports:
  - port: 8888
    targetPort: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cndw-web-httproute
spec:
  parentRefs:
  - name: handson-gateway
    namespace: gateway
    sectionName: http
  hostnames:
  - cndw-web.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: cndw-web-svc
      port: 8888
